# CEACStatusBot

./: LOCATION.md  README.Chinese.md  README.md  pyproject.toml  requirements.txt  test.py  trigger.py
.github/workflows/: actions.yml
CEACStatusBot/: __init__.py
CEACStatusBot/captcha/: __init__.py  handle.py  manual.py  onnx.py
CEACStatusBot/notification/: __init__.py  email.py  handle.py  manager.py  telegram.py
CEACStatusBot/request/: query.py
