[project]
name = "ceacstatusbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.0",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
